tests/baselines/reference/assertInWrapSomeTypeParameter.errors.txt
tests/cases/compiler/assertInWrapSomeTypeParameter.ts(1,9): error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
tests/cases/compiler/assertInWrapSomeTypeParameter.ts(1,19): error TS2464: Illegal reference C in constraint.
tests/cases/compiler/assertInWrapSomeTypeParameter.ts(2,26): error TS1005: '>' expected.


==== tests/cases/compiler/assertInWrapSomeTypeParameter.ts (3 errors) ====
    class C<T extends C<T>> {
            ~~~~~~~~~~~~~~
!!! error TS2313: Constraint of a type parameter cannot reference any type parameter from the same type parameter list.
                      ~~~~
!!! error TS2464: Illegal reference C in constraint.
        foo<U extends C<C<T>>(x: U) {
                             ~
!!! error TS1005: '>' expected.
            return null;
        }
    }